tests/fixtures/invalid/float_bitor_bool.py
# Cannot bitwise OR Float and Bool
x: float = 1.0 | True
